fix response dengan pajak